<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_crear">

    <fragment
        android:id="@+id/nav_actualizar"
        android:name="com.alejoestrada.misdeudores.UI.actualizar.ActualizarFragment"
        android:label="@string/Actualizar"
        tools:layout="@layout/fragment_actualizar" />
    <fragment
        android:id="@+id/nav_borrar"
        android:name="com.alejoestrada.misdeudores.UI.borrar.BorrarFragment"
        android:label="@string/Borrar"
        tools:layout="@layout/fragment_borrar" />
    <fragment
        android:id="@+id/nav_crear"
        android:name="com.alejoestrada.misdeudores.UI.crear.CrearFragment"
        android:label="@string/crear"
        tools:layout="@layout/fragment_crear" />
    <fragment
        android:id="@+id/nav_buscar"
        android:name="com.alejoestrada.misdeudores.UI.buscar.BuscarFragment"
        android:label="@string/buscar"
        tools:layout="@layout/fragment_buscar" />
    <fragment
        android:id="@+id/nav_lista"
        android:name="com.alejoestrada.misdeudores.UI.Lista.ListaFragment"
        android:label="@string/lalista"
        tools:layout="@layout/fragment_lista" />
</navigation>